# Detection-d-Emotions-Faciales-

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: database.py  main.py  models.py  predict.py  schemas.py
app/core/: config.py
notebooks/: test_model_image.ipynb  train_cnn.ipynb
tests/: test_main.py  test_model_image.ipynb
