[tool.poetry]
name = "detection-emotions"
version = "0.1.0"
description = "Projet Python géré avec Poetry pour assurer des dépendances stables et reproductibles. Utilise CNN pour la classification des émotions, OpenCV pour la détection faciale, FastAPI pour l’API REST, et PostgreSQL pour le stockage des résultats."
authors = ["Manal Farouqi <farouqimanal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.14"
pandas = "^2.3.3"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
scikit-learn = "^1.7.2"
joblib = "^1.5.2"
ipykernel = "^7.1.0"
pytest = "^9.0.0"
tensorflow = "^2.20.0"
keras = "^3.12.0"
opencv-python = "^4.12.0.88"
dlib = "^20.0.0"
imutils = "^0.5.4"
fastapi = "^0.121.1"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
pydantic = "^2.12.4"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.12.0"
python-multipart = "^0.0.20"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
